# uw_fetch

./: .flake8  .gitignore  .rosinstall  README.md
.github/workflows/: ci.yaml
astro_description/: CMakeLists.txt  README.md  package.xml
astro_description/config/: view_model.rviz
astro_description/launch/: view_astro_model.launch
astro_description/meshes/: display_mount.stl  head_external_camera_mount.stl  mic_mount.stl  xavier_mount.stl
astro_description/robots/: astro.xacro
astro_description/urdf/: arm.xacro  common_properties.xacro  gripper.xacro  head.xacro
astro_xavier_bringup/: CMakeLists.txt  README.md  package.xml
astro_xavier_bringup/config/: display-ui.service  lightdm.conf
astro_xavier_bringup/config/etc/network/interfaces.d/: eth0-fetch
astro_xavier_bringup/config/etc/systemd/system/: robot.service
astro_xavier_bringup/scripts/: display_ui_bringup.sh
fetch_api/: CMakeLists.txt  README.md  package.xml
fetch_api/scripts/: ifetch
fetch_api/src/fetch_api/: __init__.py  arm.py  base.py  graspcli.py
map_annotator/: CMakeLists.txt  README.md  package.xml
map_annotator/collada_web_server/: Caddyfile
map_annotator/collada_web_server/fetch_description/: CMakeLists.txt  fetch_description  package.xml
map_annotator/collada_web_server/fetch_description/launch/: view_astro_model.launch
map_annotator/collada_web_server/fetch_description/meshes/: head_display.stl  mic.stl  mic_shell.stl  xavier.stl
map_annotator/collada_web_server/fetch_description/urdf/: base.xacro  body.xacro  head.xacro
map_annotator/frontend/: ChangeTracker.js  Editor.js  Selector.js  index.css  index.html  index.js  package-lock.json  package.json  utils.js
map_annotator/frontend/src/: map-annotator-app.html
map_annotator/frontend/types_js/: Point.js  Pose.js  Region.js  Type.js
map_annotator/launch/: app.launch
map_annotator/map_annotator/nodes/: server.py
map_annotator/maps/: homeskies_arena.pgm  homeskies_arena.yaml
map_annotator/nodes/: map_annotator_node.py  scripts.py  server.py  server_svg.py  test_node.py
map_annotator_msgs/: CMakeLists.txt  package.xml
map_annotator_msgs/msg/: MapAnnotation.msg  Point.msg  PointAnnotation.msg  Pose.msg  PoseAnnotation.msg  Region.msg  RegionAnnotation.msg
map_annotator_msgs/srv/: HasPoint.srv  HasPose.srv  HasRegion.srv
uw_fetch_bringup/: CMakeLists.txt  README.md  package.xml
uw_fetch_bringup/config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  fetch.rviz  move_base.yaml
uw_fetch_bringup/config/etc/iptables/: rules.v4
uw_fetch_bringup/config/etc/pulse/: default.pa
uw_fetch_bringup/config/etc/wireguard/: wg0.conf
uw_fetch_bringup/env-hooks/: uw_fetch_bringup.sh
uw_fetch_bringup/launch/: navigation.launch
uw_fetch_bringup/launch/include/: amcl.launch.xml  move_base.launch.xml
uw_manipulation/: CMakeLists.txt  README.md  package.xml  setup.py
uw_manipulation/src/uw_manipulation/: __init__.py  graspcli.py
uw_tools/: CMakeLists.txt  README.md  package.xml
uw_tools/config/: env.sh
uw_tools/env-hooks/: uw_tools.bash.em  uw_tools.zsh.em
uw_tools/scripts/: check_connection_to_robot  configure_ssh_with_robot  configure_tunnel  syncws  uw_tools_client  uw_tools_external  uw_tools_robot  uwcp
uw_tools/scripts/available_client/: check_connection_to_robot  configure_ssh_with_robot  syncws  uwcp
uw_tools/src/client/: ssh.sh
uw_tools/src/common/: modes.bash  modes.zsh  util.bash
uw_tools/src/robot/: env.sh  welcome.sh
web_teleop/: CMakeLists.txt  README.md  package.xml  setup.py
web_teleop/frontend/: bower.json  index.html
web_teleop/frontend/src/: web-teleop-app.html
web_teleop/launch/: app.launch  app_sim.launch  standalone.launch  standalone_sim.launch
web_teleop/nodes/: actuators_node.py  joint_state_republisher.py
web_teleop/src/joint_state_reader/: __init__.py  joint_state_reader.py
