<package format="2">
  <name>uw_tools</name>
  <version>0.1.0</version>
  <description>
    Assorted shell commands for working with Astro, UW's Fetch.
  </description>
  <license>MIT</license>
  <maintainer email="robocup@cs.washington.edu">UW RoboCup Contributors</maintainer>
  <author email="robocup@cs.washington.edu">UW RoboCup Contributors</author>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>catkin</exec_depend>
  <exec_depend>rospack</exec_depend>
  <exec_depend>power_msgs</exec_depend>
</package>